--- a/Northland.Net.Application/Northland.Net.Application.csproj
+++ b/Northland.Net.Application/Northland.Net.Application.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Northland.Net.Domain\Northland.Net.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
